Исправление тестов, базы данных.