@@ -2,10 +2,7 @@ import org.example.BotLogic;
 import org.example.Database;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
-
-
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
@@ -23,7 +20,7 @@ public class Tests {
     @Test
     public void giveCartTest() throws Exception {
         when(dbMock.giveCart(-1)).thenReturn(
-                Arrays.asList("HP 15s-eq1332ur")
+                List.of("HP 15s-eq1332ur")
             );
 
             String answer = (String)botLogic.parseMessage("Посмотреть корзину",-1, "tele").get(0);
@@ -32,28 +29,40 @@ public class Tests {
 
 
     /**
-     *Тест на фильтр товаров
+     *Тест на подбор товара
+     */
+    @Test
+    public void parseDBTest() throws Exception {
+            when(dbMock.giveDB(-1, true)).thenReturn(
+                    List.of("Asus Rog 5")
+            );
+            String answer = botLogic.parseDB( -1, true);
+            assertEquals("Вам подойдет Asus Rog 5\n", answer);
+        }
+
+    /**
+     *Тест на подбор товара c ценой
      */
     @Test
     public void priceFormTest() throws Exception {
-            when(dbMock.giveDB(0, true)).thenReturn(
-                    Arrays.asList("Asus Rog 5")
-            );
+        when(dbMock.giveDB(-1, true)).thenReturn(
+                List.of("HP 15s-eq1332ur")
+        );
+        String answer = (String)botLogic.priceForm("40000", "60000", -1).get(0);
+        assertEquals("Вам подойдет HP 15s-eq1332ur\n", answer);
 
-            String answer = (String)botLogic.priceForm("40000", "60000", 0).get(0);
-            assertEquals("Вам подойдет Asus Rog 5\n", answer);
-        }
+    }
 
     /**
      *Тест на добавление товаров в корзину
      */
     @Test
     public void addCartTest() throws Exception {
-            when(dbMock.giveCart(-1)).thenReturn(
-                    Arrays.asList("HP 15s-eq1332ur", "Asus Rog 5")
-            );
-            String answer = botLogic.parseCart(-1);
-            assertEquals("У вас в корзине HP 15s-eq1332ur\nУ вас в корзине Asus Rog 5\n", answer);
+        when(dbMock.giveCart(-1)).thenReturn(
+                List.of("HP 15s-eq1332ur", "Asus Rog 5")
+        );
+        String answer = botLogic.parseCart(-1);
+        assertEquals("У вас в корзине HP 15s-eq1332ur\nУ вас в корзине Asus Rog 5\n", answer);
     }
 
     /**
@@ -61,8 +70,8 @@ public class Tests {
      */
     @Test
     public void cleanCartTest() throws Exception {
-            dbMock.cleanCart(-1);
-            verify(dbMock).cleanCart(-1);
+        dbMock.cleanCart(-1);
+        verify(dbMock).cleanCart(-1);
     }
 
     /**
@@ -70,10 +79,10 @@ public class Tests {
      */
     @Test
     public void sendDiscountsTest() throws Exception {
-            when(dbMock.giveDiscounts()).thenReturn(
-                new ArrayList<String>(Arrays.asList("HP 15s-eq1332ur", "40"))
+        when(dbMock.giveDiscounts()).thenReturn(
+                List.of("HP 15s-eq1332ur", "40")
             );
-            String answer = (String) botLogic.parseMessage("Посмотреть скидки", -1, "tele").get(0);
-            assertEquals("Сегодня продается HP 15s-eq1332ur с 40% скидкой!\n", answer);
-        }
+        String answer = (String) botLogic.parseMessage("Посмотреть скидки", -1, "tele").get(0);
+        assertEquals("Сегодня продается HP 15s-eq1332ur с 40% скидкой!\n", answer);
+    }
 }
